cart icon aligned updated and react app URL corrected

--- a/src/components/TopNav/_top-nav.scss
+++ b/src/components/TopNav/_top-nav.scss
@@ -80,9 +80,8 @@
   .cart-wishlist
   {
     width:7%;
-    margin-top:1.7em;
-    // margin-left:1em;
-    margin-left:53em;
+    margin-top:1.5em;
+    margin-left:55em;
   }
 
   .list-icon{
